# tautuk_esp32s3_core

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  MQLibrary.c  MQLibrary.h  app_ble.c  app_ble.h  app_main.c  aws_iot_mqtt.c  aws_iot_mqtt.h  defines.h  main.c
main/certs/: client.crt  client.key  temporary_certificate.json
